--- a/css/styled.less
+++ b/css/styled.less
@@ -67,3 +67,15 @@ body{
     position: absolute;
     bottom: 0;
 }
+
+// login modal
+.modal-header {
+    background-color: @background-dark;
+    color: floralwhite;
+    .close {
+        color: floralwhite;
+    }
+}
+.modal-body {
+    background-color: @background-pale;
+}
